crates/analyzer/tests/snapshots/errors__call_to_mut_fn_without_self.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `baz` must be called via `self`
  ┌─ compile_errors/call_to_mut_fn_without_self.fe:3:9
  │
3 │         baz()
  │         ^^^ `baz` is called here as a standalone function
  ·
6 │     fn baz(self) {}
  │        ^^^ `baz` is defined here as a function that takes `self`
  │
  = Suggestion: use `self.baz(...)` instead of `baz(...)`


